# botlink-xrd-sdk

./: .gitignore  .gitmodules  .sdkversion  LICENSE  README.md  api.ts  binding.gyp  index.html  index.ts  package-lock.json  package.json  tsconfig.json  xrdSocket.ts
doxygen/: annotated.html  api_8h.html  api_8h_source.html  classbotlink_1_1Public_1_1BotlinkApi-members.html  classbotlink_1_1Public_1_1BotlinkApi.html  classbotlink_1_1Public_1_1XrdConnection-members.html  classbotlink_1_1Public_1_1XrdConnection.html  classbotlink_1_1Public_1_1exception_1_1ApiError-members.html  classbotlink_1_1Public_1_1exception_1_1ApiError.html  classbotlink_1_1Public_1_1exception_1_1ApiHttpError-members.html  classbotlink_1_1Public_1_1exception_1_1ApiHttpError.html  classbotlink_1_1Public_1_1exception_1_1BotlinkLogic-members.html  classbotlink_1_1Public_1_1exception_1_1BotlinkLogic.html  classbotlink_1_1Public_1_1exception_1_1BotlinkRuntime-members.html  classbotlink_1_1Public_1_1exception_1_1BotlinkRuntime.html  classbotlink_1_1Public_1_1exception_1_1KvsError-members.html  classbotlink_1_1Public_1_1exception_1_1KvsError.html  classbotlink_1_1Public_1_1exception_1_1XrdConnectionError-members.html  classbotlink_1_1Public_1_1exception_1_1XrdConnectionError.html  classbotlink_1_1Public_1_1exception_1_1XrdTimeout-members.html  classbotlink_1_1Public_1_1exception_1_1XrdTimeout.html  classbotlink_1_1unsupported_1_1BinaryLogger-members.html  classbotlink_1_1unsupported_1_1BinaryLogger.html  classes.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  hierarchy.html  index.html  menudata.js  structbotlink_1_1Public_1_1CellSignalInfo-members.html  structbotlink_1_1Public_1_1CellSignalInfo.html  structbotlink_1_1Public_1_1PingResponse-members.html  structbotlink_1_1Public_1_1PingResponse.html  structbotlink_1_1Public_1_1SignalInfo2g-members.html  structbotlink_1_1Public_1_1SignalInfo2g.html  structbotlink_1_1Public_1_1SignalInfo3g-members.html  structbotlink_1_1Public_1_1SignalInfo3g.html  (+8 more)
doxygen/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  (+16 more)
example/: README.md  example.env  index-classic.js  index-udp-multi.js  index-udp.js  index.js  package.json  presence.js
example/tcp-swarm-example/: index.js  mavlinkMessageTransform.js
scripts/: find_sdk.py  setup-cxx-sdk.js
src/: api.ts  apmlist.d.ts  apmlist.js  auth.ts  index.ts  message-coder.ts  urls.ts  xrd.ts  xrdSocket.ts
src/napi/: CMakeLists.txt  package.json
src/napi/lib/: binding.js  binding.ts  botlink-xrd-sdk.d.ts
src/napi/src/: .video_forwarder.cpp.swp  .xrdconnection_wrapper.cpp.swp  addon.cpp  botlink_api_wrapper.cpp  botlink_api_wrapper.h  logger_wrapper.cpp  logger_wrapper.h  video_forwarder.cpp  video_forwarder.h  wrtc_wrapper.cpp  wrtc_wrapper.h  xrdconnection_wrapper.cpp  xrdconnection_wrapper.h
src/napi/test/: test.js  test.ts
typedoc/: index.html
typedoc/assets/: search.js
typedoc/assets/js/: search.js
typedoc/enums/: BotlinkApiEvents.html  XrdConnectionEvents.html  XrdConnectionStatus.html  XrdLoggerSource.html  XrdVideoCodec.html  XrdVideoResolution.html  XrdVideoState.html  xrdconnectionevents.html  xrdconnectionstatus.html  xrdloggersource.html  xrdvideocodec.html  xrdvideoresolution.html
typedoc/interfaces/: ApiBindings.html  ApiLoginToken.html  ApiLoginUsername.html  CellSignalInfo.html  SignalInfo2g.html  SignalInfo3g.html  SignalInfoLte.html  Xrd.html  XrdConnectionBindings.html  XrdLoggerBindings.html  XrdPingResponse.html  XrdVideoConfig.html  apibindings.html  apilogintoken.html  apiloginusername.html  xrd.html  xrdconnectionbindings.html  xrdloggerbindings.html  xrdvideoconfig.html
